# ml-util

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.github/: Dockerfile  pre-commit.yaml
legacy/: _cross_validators.py  ml_model_analysis_utils.py  ml_model_binary_classification.py  ml_model_training_utils.py
src/ml_utils/model_tuning/: basic_tuner.py  helpers.py
src/ml_utils/model_tuning/classification/: binary_tuner.py
src/ml_utils/utils/: decorators.py  model_analysis.py  plotting.py
